feat: harden agent semantic planning and docs